# SCB

./: CMakeLists.txt  README.md  blwindow.cpp  camera.py  icon.rc  ipwindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  my_windows.h  resources.qrc  uartwindow.cpp  videowidget.cpp  videowidget.h
ui/: bluetooth.ui  ip.ui  mainwindow.ui  uart.ui
